Tweaks the sidebar to fix a wrapping issue.

--- a/alert/assets/media/css/override.css
+++ b/alert/assets/media/css/override.css
@@ -186,6 +186,14 @@ a.button:active {
     margin-bottom: 2em;
 }
 
+div.sidebar-checkbox {
+    min-height: 23px; 
+}
+
+input.court-checkbox, input.status-checkbox {
+    top: 0px; 
+}
+
 /* Results page */
 #id_q:focus{
     outline-style: none;
